# StressLab-AI

./: .gitignore  Makefile  README.md
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/api/: agents.py  cad.py  health.py  simulation.py
apps/api/app/models/: __init__.py  agent_output.py  material.py  scenario.py  simulation.py
apps/api/tests/: test_health.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/components/layout/: AppShell.tsx  BottomDrawer.tsx  LeftPanel.tsx  RightPanel.tsx  TopToolbar.tsx  ViewportPanel.tsx
apps/web/src/components/scenarios/: ComparisonPanel.tsx  ReportView.tsx  SaveScenarioDialog.tsx  ScenarioList.tsx
apps/web/src/components/viewport/: ForceHandle.tsx  ModelMesh.tsx  PinMarker.tsx  SceneCanvas.tsx  SceneHelpers.tsx
apps/web/src/lib/agents/: chat.ts  coordinator.ts  designAdvisor.ts  failureAnalyzer.ts  materialAnalyzer.ts  stateAdapter.ts  synthesisAnalyzer.ts  types.ts
apps/web/src/lib/scenarios/: comparison.ts  persistence.ts  report.ts  types.ts
apps/web/src/lib/simulation/: deformation.ts  engine.ts  geometryAnalysis.ts  heatmap.ts  regionExtraction.ts  (+2 more)
apps/web/src/stores/: useAgentStore.ts  useChatStore.ts  useMaterialStore.ts  useModelStore.ts  useScenarioStore.ts  useSimulationStore.ts  useWorkspaceStore.ts
apps/web/src/styles/: globals.css
docs/: architecture.md  progress.md  setup.md
scripts/: dev.sh
(+1 files in other folders)
